improvements to VisibleSatellitesProjection component; fix readme

--- a/src/VisibleSatellitesProjection.css
+++ b/src/VisibleSatellitesProjection.css
@@ -1,7 +1,5 @@
 .container {
 	display: flex;
-	height: 500px;
-	max-height: 500px;
 	flex-direction: column;
 	align-items: center;
 	background-color: black;
